[tool.poetry]
name = "arrow-test"
version = "0.1.0"
description = ""
authors = ["Dan Coates <mail@dancoat.es>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyarrow = "^7.0.0"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
